# neurotick

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
examples/block_race/: CMakeLists.txt  README.md  main.cpp
examples/block_race/include/: pointvector.hpp  racer.hpp  track.hpp
examples/block_race/source/: pointvector.cpp  racer.cpp  track.cpp
include/: connector.hpp  layer.hpp  model.hpp  neural.hpp  neuron.hpp  printer.hpp  train.hpp
source/: connector.cpp  layer.cpp  model.cpp  neural.cpp  neuron.cpp  printer.cpp  train.cpp
